tests/baselines/reference/legacyNodeModulesExportsSpecifierGenerationConditions.errors.txt
index.ts(1,14): error TS2742: The inferred type of 'a' cannot be named without a reference to './node_modules/inner/private'. This is likely not portable. A type annotation is necessary.


==== index.ts (1 errors) ====
    export const a = async () => (await import("inner")).x();
                 ~
!!! error TS2742: The inferred type of 'a' cannot be named without a reference to './node_modules/inner/private'. This is likely not portable. A type annotation is necessary.
==== node_modules/inner/index.d.ts (0 errors) ====
    export { x } from "./other.js";
==== node_modules/inner/other.d.ts (0 errors) ====
    import { Thing } from "./private.js"
    export const x: () => Thing;
==== node_modules/inner/private.d.ts (0 errors) ====
    export interface Thing {} // not exported in export map, inaccessible under new module modes
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": "./index.js"
    }
==== node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "type": "module",
        "exports": {
            ".": {
                "default": "./index.js"
            },
            "./other": {
                "default": "./other.js"
            }
        }
    }